# ordeq

./: .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  404.html  LICENSE  NOTICE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml  labels.yml  publish-docs.yml  pull_request.yml  release.yml
CONTRIBUTING/: index.html
api/ordeq/: index.html
api/ordeq/_catalog/: index.html
api/ordeq/_fqn/: index.html
api/ordeq/_graph/: index.html
api/ordeq/_hook/: index.html
api/ordeq/_io/: index.html
api/ordeq/_nodes/: index.html
api/ordeq/_resolve/: index.html
api/ordeq/_runner/: index.html
api/ordeq/types/: index.html
api/ordeq_altair/: index.html
api/ordeq_altair/chart/: index.html
api/ordeq_args/: index.html
api/ordeq_args/command_line_arg/: index.html
api/ordeq_args/environment_variable/: index.html
api/ordeq_boto3/: index.html
api/ordeq_boto3/s3_connector/: index.html
api/ordeq_boto3/s3_object/: index.html
api/ordeq_common/: index.html
api/ordeq_dev_tools/: index.html
api/ordeq_dev_tools/paths/: index.html
api/ordeq_dev_tools/utils/: index.html
api/ordeq_duckdb/: index.html
api/ordeq_duckdb/connection/: index.html
api/ordeq_duckdb/csv/: index.html
api/ordeq_duckdb/table/: index.html
api/ordeq_duckdb/view/: index.html
api/ordeq_faiss/: index.html
api/ordeq_faiss/index_module/: index.html
api/ordeq_files/: index.html
api/ordeq_files/bytes/: index.html
api/ordeq_files/csv/: index.html
api/ordeq_files/glob/: index.html
api/ordeq_files/json/: index.html
api/ordeq_files/pickle/: index.html
api/ordeq_files/text/: index.html
api/ordeq_huggingface/: index.html
api/ordeq_huggingface/dataset/: index.html
api/ordeq_huggingface/disk_dataset/: index.html
api/ordeq_ibis/: index.html
api/ordeq_joblib/: index.html
api/ordeq_joblib/joblib/: index.html
api/ordeq_manifest/: index.html
api/ordeq_manifest/manifest/: index.html
api/ordeq_manifest/models/: index.html
api/ordeq_matplotlib/: index.html
api/ordeq_matplotlib/figure/: index.html
api/ordeq_networkx/: index.html
api/ordeq_networkx/networkx_gml/: index.html
api/ordeq_networkx/networkx_graphml/: index.html
api/ordeq_networkx/networkx_json/: index.html
api/ordeq_numpy/: index.html
api/ordeq_numpy/binary_array/: index.html
api/ordeq_numpy/text_array/: index.html
api/ordeq_pandas/: index.html
api/ordeq_pandas/csv/: index.html
api/ordeq_pandas/excel/: index.html
api/ordeq_pandas/parquet/: index.html
api/ordeq_polars/: index.html
api/ordeq_pydantic/: index.html
api/ordeq_pydantic/json/: index.html
api/ordeq_pydantic/model/: index.html
api/ordeq_pymupdf/: index.html
api/ordeq_pymupdf/pdf_file/: index.html
api/ordeq_pyproject/: index.html
api/ordeq_pyproject/pyproject/: index.html
api/ordeq_requests/: index.html
api/ordeq_sentence_transformers/: index.html
api/ordeq_sentence_transformers/sentence_transformer/: index.html
api/ordeq_spark/: index.html
api/ordeq_spark/utils/: index.html
api/ordeq_test_utils/: index.html
api/ordeq_test_utils/snapshot/: index.html
api/ordeq_toml/: index.html
api/ordeq_toml/toml/: index.html
api/ordeq_viz/: index.html
api/ordeq_viz/api/: index.html
api/ordeq_viz/graph/: index.html
api/ordeq_viz/to_kedro_viz/: index.html
api/ordeq_viz/to_mermaid/: index.html
api/ordeq_yaml/: index.html
api/ordeq_yaml/yaml/: index.html
contributing/acknowledgements/: index.html
contributing/documentation/: index.html
contributing/integrations/: index.html
docs/: .nav.yml  CONTRIBUTING.md  index.md  validate.sh
docs/1_Getting_started/: _quickstart.md  introduction.md
docs/1_Getting_started/2_Concepts/: _IO.md  _nodes.md  catalogs.md  hooks.md
docs/2_Guides/: io.md  testing_nodes.md
docs/2_Guides/examples/: benchmark_node_runtimes.md  lazy_dataset_processing.md
docs/4_Contributing/: contributing.md  documentation.md
docs/api/: .gitignore  .nav.yml
docs/contributing/: acknowledgements.md  contributing.md  documentation.md  integrations.md
docs/examples/ordeq-docker-example/: pyproject.toml  run.sh
docs/examples/ordeq-docker-example/src/app/: pipeline.py
docs/getting-started/: introduction.md  quickstart.md
docs/getting-started/concepts/: catalogs.md  hooks.md  io.md  nodes.md  views.md
docs/guides/: cloud_storage.md  custom_io.md  kedro.md  lazy_io.md  node_parameters.md  parametrized_io.md  run_and_viz.md  starting_a_new_project.md  testing_nodes.md
docs/guides/integrations/: docker.md  (+3 more)
examples/integration-docker/: Dockerfile
examples/integration-marimo/: README.md  pyproject.toml
examples/integration-streamlit/: README.md  pyproject.toml
examples/rag-pipeline-scaffold/: pyproject.toml  rag_pipeline.mermaid
examples/rag-pipeline-scaffold/src/rag_pipeline/: __main__.py  catalog.py
examples/rag-pipeline-scaffold/src/rag_pipeline/rag/: annotation.py  evaluation.py  indexer.py  policies.py
examples/starter-nested-subpipelines/: pyproject.toml
examples/starter-single-file/: main.py  pyproject.toml
examples/starter_package/: pyproject.toml
examples/starter_single_file/: main.py
examples/starter_subpipelines/: pyproject.toml
getting-started/introduction/: index.html
guides/cloud_storage/: index.html
guides/custom_io/: index.html
guides/kedro/: index.html
guides/lazy_io/: index.html
guides/node_parameters/: index.html
guides/parametrized_io/: index.html
guides/run_and_viz/: index.html
guides/starting_a_new_project/: index.html
guides/testing_nodes/: index.html
javascripts/: strip-pycon-on-copy.js
scripts/: check_package_changes.py  copy-readme.sh  generate_api_docs.py  generate_draft_releases.py  generate_package_overview.py  list_changed_packages.py  list_dependencies.py  mkdocs_hooks.py  next_tag.py  release.sh  relevant_packages.py  utils.py
search/: search_index.json
src/ordeq_docs/: __init__.py  marimo_blocks.py
src/ordeq_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+68 files in other folders)
