[project]
name = "ordeq-packages"
requires-python = ">=3.10"


[dependency-groups]
dev = [












    "markdown",
    "pymdown-extensions",
]
test = [




    { include-group = "test" },

]
types = [




[tool.uv.sources]
ordeq = { workspace = true }
ordeq-args = { workspace = true }
ordeq-boto3 = { workspace = true }
ordeq-common = { workspace = true }
ordeq-cli-runner = { workspace = true }
ordeq-faiss = { workspace = true }
ordeq-files = { workspace = true }

ordeq-ibis = { workspace = true }
ordeq-joblib = { workspace = true }
ordeq-matplotlib = { workspace = true }
ordeq-numpy = { workspace = true }
ordeq-pandas = { workspace = true }
ordeq-polars = { workspace = true }
ordeq-project = { workspace = true }
ordeq-pydantic = { workspace = true }
ordeq-pymupdf = { workspace = true }
ordeq-requests = { workspace = true }
ordeq-spark = { workspace = true }
ordeq-viz = { workspace = true }
ordeq-viz-cli = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]






    "if TYPE_CHECKING:",
    "pass",
    "raise NotImplementedError",





    "_version.py",
    "packages/ordeq/tests/resources/*",
    "packages/ordeq/tests/snapshots/*",





    "docker: marks tests that require (deselect with '-m \"not docker\"')",
]




exclude = [
    "packages/*/src/*/_version.py",
    "packages/*/tests/resources/*",
]
force-exclude = true







[tool.ruff.lint]
extend-select = [
    "A",
    "AIR",
    "ASYNC",
    "B",
    "C4",
    #  "D102",  # TODO: enable
    "D103",
    "D212",
    "D301",
    "D410",
    "D411",
    "D414",
    "D416",
    "D417",
    "DOC",
    "E",
    "ERA",
    "EXE",
    "FA",
    #  "FIX",  # TODO: enable
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "NPY",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "TC",
    "UP",
    "W",
]
ignore = [
    "EM102", # f string in exception
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "PLR1722", # Use `sys.exit()` instead of `exit`
    "PLR0915", # Too many statements (61 > 50)
    "TC003", # Move standard library import
    "TC002", # Move third-party import `airflow.models.param.Param`
    "PLR0917", # Too many positional arguments (6/5)
    "PLR6301", # Method `...` could be a function, class method, or static method
    "PLR0912", # Too many branches (13 > 12)
    "S301", # Pickle
    "S403", # Pickle
]




[tool.ruff.lint.per-file-ignores]


    "ANN201",
    "D",
    "DOC",
    "INP",
    "PLC2701",
    "PLR6301",
    "S101",
    "S608",
    "SLF",



    "ANN201",
    "D",
    "DOC",
    "PLC2701",
    "PLR6301",







[tool.ty.src]
exclude = [
    "packages/*/src/*/_version.py",
    "packages/*/tests/resources/*"  # type checking on resources is conducted by snapshot tests
]








